--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 <body>
 <div class="container">
     <h1>Opskrifter</h1>
-
+    <p>Tester bare lige</p>
     <table>
         <thead class="table table-striped">
         <tr>
