--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -9,6 +9,7 @@
 <div class="container">
     <h1>Opskrifter</h1>
     <p>Tester bare lige</p>
+    <p>Vi test igen!</p>
     <table>
         <thead class="table table-striped">
         <tr>
